--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
       name="description"
       content="Document the processes, goals and milestones involved in your journey to success"
     />
+    <meta property="og:image" content="https://img.freepik.com/premium-vector/concept-project-closure-project-managment-life-cycle-3d-vector-illustration_365941-572.jpg">
+<meta property="og:image:secure_url" content="https://img.freepik.com/premium-vector/concept-project-closure-project-managment-life-cycle-3d-vector-illustration_365941-572.jpg">
+<meta property="og:image:width" content="600">
+<meta property="og:image:height" content="315">
+<meta property="og:image:type" content="image/png">
+
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
