stopping here today zzzzz

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" href="./img/logo-512.png">
     <link rel="stylesheet" href="./main.css">
-    <title>Trek ToDo app</title>
+    <title>&lt;/&gt; Trek ToDo_ ❤</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
